maj cahier de tp
Co-authored-by: Nicolas OTAL <NicolasO-git@users.noreply.github.com>

--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,9 @@
 \usepackage{hyperref}
 \usepackage{fancyhdr}
 \renewcommand{\thesection}{\arabic{section}}
+\input{src/00-configuration}
 \begin{document}
+% Load configuration
 
 \include{src/00-Page-de-garde}
 \newpage
