--- a/src/00-Page-de-garde.tex
+++ b/src/00-Page-de-garde.tex
@@ -1,4 +1,5 @@
-\pagestyle{empty}
+{  
+\thispagestyle{empty}
 ~
 \vspace{2cm}
 \begin{center}
@@ -14,15 +15,20 @@
 \vspace{2cm}
 
 \begin{center}
-    \Huge{M1 EEA}
+    \Huge{\formation}
 \end{center}
 
 \begin{center}
-    \Huge{SME}
+    \Huge{\speciality}
 \end{center}
 
 \vspace{4cm}
 
 \begin{center}
-    \LARGE{TP Réalisation Systèmes - Git}
+    \LARGE{\subject}
 \end{center}
+
+\begin{center}
+    \large{\subjectTitle}
+\end{center}
+}
