--- a/src/01-Exercices.tex
+++ b/src/01-Exercices.tex
@@ -119,7 +119,7 @@ L'objet \textit{\textbf{Cell}} correspondra à la case de la grille du démineur
 \end{itemize}
 
 \subsection{Fonctionnalité de la grille}
-L'objet \textit{\textbf{Game}} correspond à la plateforme du jeu qui va contenir la grille de cases. La grille est un vecteur de vecteur de cases (tableau à deux dimensions). Cet objet devra gérer l'affichage de la grille et la découverte de la grille dans un premier temps. Se placer sur la branche \textbf{dev\_Game} pour ajouter la fonctionnalité du jeu. À vous de décider quand faire des commits et quels noms auront ces commits.
+L'objet \textit{\textbf{Game}} correspond à la plateforme du jeu qui va contenir la grille de cases. La grille est un vecteur de vecteur de cases (tableau à deux dimensions). Cet objet devra gérer l'affichage de la grille et la découverte de la grille dans un premier temps. Se placer sur la branche \textbf{dev\_game} pour ajouter la fonctionnalité du jeu. À vous de décider quand faire des commits et quels noms auront ces commits.
 
 \medskip
 
