correction url minesweeper et game of life

--- a/src/01-Exercices.tex
+++ b/src/01-Exercices.tex
@@ -63,7 +63,7 @@ L'objectif sera la réalisation d'un jeu sur votre shell, le démineur en C++, e
 Grâce à votre terminal placez vous sur le bureau de votre session. Ensuite effectuer un : \textbf{git clone} du projet situé à cette url : 
 
 \begin{center}
-    \textbf{\href{https://github.com/Cours-Master-SME/Minesweeper\_template.git}{https://github.com/Cours-Master-SME/minesweeper\_template.git}}.
+    \textbf{\href{https://github.com/Cours-Master-SME/minesweeper\_template.git}{https://github.com/Cours-Master-SME/minesweeper\_template.git}}
 \end{center}
 
 
@@ -223,7 +223,12 @@ A chaque itération, le jeu évolue selon les règles suivantes :
 \end{itemize}
 
 \section{Mise en place du projet}
-Cloner le dépôt <url vers depot> qui contient modelé du jeu avec des méthodes à compléter.
+Cloner le dépôt suivant qui contient modelé du jeu avec des méthodes à compléter : 
+
+\begin{center}
+    \textbf{\href{https://github.com/Master-EEA-SME/game\_of\_life\_template.git}{https://github.com/Master-EEA-SME/game\_of\_life\_template.git}}
+\end{center}
+
 Avec \textit{CMake}, configurer le projet, compiler et exécuter le programme.
 
 \section{Développement en parallèle}
